# app/Http/Controllers/Swagger/AuthController.php
@@ -46,7 +46,7 @@ use Illuminate\Routing\Controller;
  *         description="OK",
  *         @OA\JsonContent(
  *             @OA\Property(property="data", type="object",
- *                 @OA\Property(property="access_token", type="string", example="d520bcb82824a2638d7d63227d12daa51fde616da52be55af248d6b683009821"),
+ *                 @OA\Property(property="access_token", type="string", example="id|d520bcb82824a2638d7d63227d12daa51fde616da52be55af248d6b683009821"),
  *                 @OA\Property(property="token_type", type="string", example="Bearer"),
  *             ),
  *         ),
@@ -57,7 +57,6 @@ use Illuminate\Routing\Controller;
  *     path="/api/logout",
  *     summary="Log Out",
  *     tags={"Auth"},
- *     security={{ "bearerAuth": {} }},
  *     @OA\Response(
  *         response=200,
  *         description="OK"
