# app/Http/Controllers/Swagger/CommentController.php
@@ -9,7 +9,6 @@ use Illuminate\Routing\Controller;
  *     path="/api/comments",
  *     summary="Get all comments",
  *     tags={"Comment"},
- *     security={{ "bearerAuth": {} }},
  *     @OA\Response(
  *         response=200,
  *         description="OK",
@@ -33,7 +32,6 @@ use Illuminate\Routing\Controller;
  *     path="/api/comments/{comment}",
  *     summary="Get one comment",
  *     tags={"Comment"},
- *     security={{ "bearerAuth": {} }},
  *     @OA\Parameter(
  *         description="Comment ID",
  *         in="path",
@@ -61,7 +59,6 @@ use Illuminate\Routing\Controller;
  *     path="/api/comments",
  *     summary="Create comment",
  *     tags={"Comment"},
- *     security={{ "bearerAuth": {} }},
  *     @OA\RequestBody(
  *         @OA\JsonContent(
  *             allOf={
@@ -83,7 +80,6 @@ use Illuminate\Routing\Controller;
  *     path="/api/comments/{comment}",
  *     summary="Update comment",
  *     tags={"Comment"},
- *     security={{ "bearerAuth": {} }},
  *     @OA\Parameter(
  *         description="Comment ID",
  *         in="path",
@@ -113,7 +109,6 @@ use Illuminate\Routing\Controller;
  *     path="/api/comments/{comment}",
  *     summary="Delete comment",
  *     tags={"Comment"},
- *     security={{ "bearerAuth": {} }},
  *     @OA\Parameter(
  *         description="Comment ID",
  *         in="path",
